fix form overflow

--- a/src/components/generic-form-permit/style.scss
+++ b/src/components/generic-form-permit/style.scss
@@ -2,9 +2,11 @@ $borderColor: #f0f2f5;
 $bgColor: #f6f8fa;
 
 .genericForm {
+  flex-grow: 1;
   max-width: 1200px;
   margin: 20px auto;
   padding: 20px;
+  overflow: auto;
   border-radius: 10px;
   background-color: white;
 
