--- a/src/components/module-permitting/abandon-report/style.scss
+++ b/src/components/module-permitting/abandon-report/style.scss
@@ -1,4 +1,8 @@
 .abandon-report {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+
   .top-bar-buttons-icons {
     display: none;
   }
